# simple-mcp-server

./: README.md  prompts.py  pyproject.toml  resources.py  server.py  tools.py
.kiro/specs/simple-mcp-server/: design.md  requirements.md
docs/adr/: 001-use-python-mcp-sdk.md  002-stdio-as-primary-transport.md  003-modular-file-structure.md
tests/: test_integration.py  test_prompts.py  test_resources.py  test_tools.py
