[project]
name = "simple-mcp-server"
version = "0.1.0"
description = "A learning-focused MCP server built with the official Python MCP SDK"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "hypothesis",
    "pytest",
    "anyio[trio]",
    "pytest-anyio",
]

[project.scripts]
simple-mcp-server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
anyio_mode = "auto"
